# agent-assisted-lean-formalization-engine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  backlog.md  pyproject.toml  roadmap.md  setup.py
artifacts/: README.md
artifacts/canonical/: README.md
artifacts/runs/PG-theorem/: manifest.json
artifacts/runs/PG-theorem-Murphy/: manifest.json
artifacts/runs/PG-theorem-Murphy-local-bellman-archive/: manifest.json
artifacts/runs/convergent-seq-bounded/: ARCHIVE_NOTE.md  manifest.json
assets/: README.md
docs/: README.md  architecture.md  backlog.md  landscape.md  manual-review-walkthrough.md  orchestrator-contract.md  roadmap.md  test-coverage-plan.md
examples/: README.md  run_codex_agent_demo.py  run_codex_manual_review_demo.py  run_command_agent_demo.py  run_zero_add_demo.py
examples/providers/: scripted_repair_provider.py
homework-src/hw1/: perceptron_experiments.py
lean_workspace_template/: lake-manifest.json  lakefile.toml
lean_workspace_template/FormalizationEngineWorkspace/: Basic.lean  Draft.lean  Generated.lean
src/lean_formalization_engine/: __init__.py  agents.py  backend_runtime.py  cli.py  cli_exec_agent.py  codex_agent.py  demo_agent.py  ingest.py  lean_runner.py  models.py  prompt_loader.py  storage.py  subprocess_agent.py  template_manager.py  workflow.py
tests/: test_cli_exec_agent.py  test_codex_agent.py  test_demo_workflow.py  test_ingest.py  test_manual_review_demo.py  test_models.py  test_prompt_loader.py  test_pytest_source_import.py  test_storage.py  test_subprocess_agent.py  test_template_manager.py  test_workflow.py
(+297 files in other folders)
